[tool.poetry]
name = "dados-covid"
version = "0.1.0"
description = ""
authors = ["Victor Lucas <victorlucas.santos124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly-express = "^0.4.1"
plotly = "^6.0.1"
streamlit = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
